Fix HTML formatting and update stylesheet link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="robots" content="index,follow" />
   <title>Offline Games : Blind Maze</title>
-  <link rel="stylesheet" href="assets/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -50,9 +50,7 @@
 
     <section class="card" id="contact">
       <h2>Support contact</h2>
-      <p>
-        If you need help, report a bug, or have privacy questions, email:
-      </p>
+      <p>If you need help or have privacy questions:</p>
 
       <div class="contact-box">
         <div><strong>Developer:</strong> Simon Chitepo</div>
