--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="robots" content="index,follow" />
   <title>Privacy Policy | Offline Games : Blind Maze</title>
-  <link rel="stylesheet" href="assets/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         </div>
       </div>
 
-      <nav class="topbar-actions" aria-label="Page actions">
+      <nav class="topbar-actions">
         <a class="btn" href="index.html">Home</a>
         <button class="btn" id="btnPrint" type="button">Print</button>
         <a class="btn btn-primary" href="#contact">Contact</a>
@@ -35,126 +35,66 @@
       </p>
 
       <p>
-        This Privacy Policy explains how <strong>Offline Games : Blind Maze</strong> (“we”, “us”, “our”) handles information
-        when you use our mobile application (the “App”). We designed the App to work offline and to collect as little data
-        as possible.
+        This Privacy Policy explains how <strong>Offline Games : Blind Maze</strong> (“we”, “us”, “our”)
+        handles information when you use our mobile application (the “App”).
+        The App is designed to work offline and collect as little data as possible.
       </p>
 
       <div class="notice">
         <strong>Plain-English summary:</strong>
         <ul>
-          <li>We do not sell your personal information.</li>
-          <li>We do not collect precise location data.</li>
-          <li>We do not require account creation.</li>
-          <li>If analytics/ads are enabled later, we will update this policy.</li>
+          <li>No selling of personal data</li>
+          <li>No precise location tracking</li>
+          <li>No accounts required</li>
+          <li>Policy will update if analytics or ads are added</li>
         </ul>
       </div>
     </section>
 
     <section class="card">
       <h2>1. Information we collect</h2>
-
-      <h3>1.1 Information you provide</h3>
       <p>
-        We do not require you to provide personal information to use the App (such as name, email address, or phone number).
-        If you contact us by email, we will receive the information you include in your message.
-      </p>
-
-      <h3>1.2 Information collected automatically</h3>
-      <p>
-        By default, the App is intended to function offline and does not automatically collect personal information.
-        However, depending on your distribution platform and device settings, the platform (e.g., an app store) may
-        collect certain information under its own policies.
-      </p>
-
-      <h3>1.3 Device permissions</h3>
-      <p>
-        The App does not request sensitive permissions such as location, contacts, microphone, or camera unless clearly
-        required for an explicit feature. If a future version adds permissions, we will disclose them here.
+        We do not require personal information to use the App.
+        If you email us, we receive the information you provide in that message.
       </p>
     </section>
 
     <section class="card">
-      <h2>2. How we use information</h2>
-      <p>We use information only to:</p>
-      <ul>
-        <li>Respond to your support requests if you contact us</li>
-        <li>Operate and maintain the App</li>
-        <li>Improve stability and performance (if diagnostic logs are ever enabled)</li>
-      </ul>
-    </section>
-
-    <section class="card">
-      <h2>3. Data storage and retention</h2>
+      <h2>2. Data storage</h2>
       <p>
-        Game progress and settings may be stored locally on your device (for example, using local storage).
-        We do not receive that local data unless you voluntarily send it to us (e.g., via support email).
-      </p>
-      <p>
-        If you email us, we retain messages as long as necessary to respond and for reasonable support recordkeeping.
+        Game progress may be stored locally on your device.
+        We do not collect or transmit this data.
       </p>
     </section>
 
     <section class="card">
-      <h2>4. Sharing and disclosure</h2>
+      <h2>3. Third-party services</h2>
       <p>
-        We do not sell your personal information. We do not share personal information with third parties except:
-      </p>
-      <ul>
-        <li>If required by law, regulation, or legal process</li>
-        <li>To protect rights, safety, and security of users and the App</li>
-        <li>If you explicitly request or consent to sharing</li>
-      </ul>
-    </section>
-
-    <section class="card">
-      <h2>5. Third-party services</h2>
-      <p>
-        The App may be distributed through third-party platforms (such as an app store). Those platforms may collect
-        information independently. Please review their privacy policies for details.
-      </p>
-      <p>
-        <strong>Current status:</strong> The App does not integrate third-party analytics SDKs or advertising SDKs by default.
-        If we add services like analytics, crash reporting, or ads, we will update this policy with the provider names and links.
+        The App does not use third-party analytics or advertising SDKs.
+        App stores may collect information under their own policies.
       </p>
     </section>
 
     <section class="card">
-      <h2>6. Children’s privacy</h2>
+      <h2>4. Children’s privacy</h2>
       <p>
-        The App is intended for a general audience. We do not knowingly collect personal information from children.
-        If you believe a child has provided personal information to us, contact us and we will take appropriate steps to delete it.
-      </p>
-    </section>
-
-    <section class="card">
-      <h2>7. Security</h2>
-      <p>
-        We use reasonable administrative and technical safeguards appropriate to the nature of the App.
-        No method of transmission or storage is 100% secure; therefore we cannot guarantee absolute security.
+        We do not knowingly collect data from children.
+        If you believe this has occurred, contact us for removal.
       </p>
     </section>
 
     <section class="card" id="contact">
-      <h2>8. Contact</h2>
-      <p>If you have questions about this Privacy Policy, contact us:</p>
-
+      <h2>5. Contact</h2>
       <div class="contact-box">
-        <div><strong>Developer/Publisher:</strong> <span id="developerName">Simon Chitepo</span></div>
-        <div><strong>Email:</strong> <a id="supportEmail" href="mailto:cypherzw@gmail.com">cypherzw@gmail.com</a></div>
+        <div><strong>Developer:</strong> <span id="developerName">Simon Chitepo</span></div>
+        <div><strong>Email:</strong>
+          <a id="supportEmail" href="mailto:cypherzw@gmail.com">cypherzw@gmail.com</a>
+        </div>
       </div>
     </section>
 
-    <section class="card">
-      <h2>9. Changes to this policy</h2>
-      <p>
-        We may update this Privacy Policy from time to time. We will revise the “Last updated” date at the top of this page.
-        Continued use of the App after changes means you accept the updated policy.
-      </p>
-    </section>
-
     <footer class="footer">
-      <div>© <span id="year"></span> Offline Games : Blind Maze. All rights reserved.</div>
+      <div>© <span id="year"></span> Offline Games : Blind Maze</div>
       <div class="footer-links">
         <a href="index.html">Home</a>
         <a href="privacy.html" aria-current="page">Privacy</a>
@@ -162,6 +102,6 @@
     </footer>
   </main>
 
-  <script src="assets/privacy.js"></script>
+  <script src="privacy.js"></script>
 </body>
 </html>
